@@ -15,8 +15,12 @@
  - [2041754] Feature Request #1896717 Registration notification missing information about instance
  - Patch for SF bugs 1775059 and 2352146 2 Authentications with LoginPage cause connection exhaust
  - - Fixed hardcoded metadata language qualifier in DescribeStep to use default.language configuration parameter
+
 (Elliot Metsger)
  - Patch for SF bug #2016130 checksum checker can not retrieve very large bitstream
+
+(Tim Donohue)
+ - [2433852] Add File Format Descriptions to XMLUI 1.5.x
 
 1.5.1 final
 ===========
